--- a/update-kustomize-image-tag/action.yaml
+++ b/update-kustomize-image-tag/action.yaml
@@ -15,7 +15,7 @@ inputs:
     description: 'YAML string of images in format: name: image:tag'
     required: true
 
-  target-kustomization-path:
+  kustomization-path:
     description: 'Path to the kustomization directory in target repository'
     required: true
     default: '.'
@@ -53,5 +53,5 @@ runs:
       INPUT_REPOSITORY: ${{ inputs.repository }}
       INPUT_TOKEN: ${{ inputs.token }}
       INPUT_IMAGES: ${{ inputs.images }}
-      INPUT_TARGET_KUSTOMIZATION_PATH: ${{ inputs.target-kustomization-path }}
+      INPUT_TARGET_KUSTOMIZATION_PATH: ${{ inputs.kustomization-path }}
       INPUT_COMMIT_MESSAGE: ${{ inputs.commit-message }}
