--- a/publish-docs/action.yml
+++ b/publish-docs/action.yml
@@ -52,5 +52,11 @@ runs:
       git config user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
 
       git add -A
-      git commit -m "Run details: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-      git push
+
+      # Only commit if there are changes
+      if ! git diff --staged --quiet; then
+        git commit -m "Run details: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+        git push
+      else
+        echo "No changes to commit"
+      fi
