--- a/argocd-restart-deployments/action.yaml
+++ b/argocd-restart-deployments/action.yaml
@@ -28,8 +28,8 @@ runs:
       ARGOCD_SERVER: ${{ inputs.argocd-server }}
       ARGOCD_AUTH_TOKEN: ${{ inputs.argocd-auth-token }}
     run: |
-      curl -sSL -o /usr/bin/argocd https://${ARGOCD_SERVER}/download/argocd-linux-amd64
-      chmod +x /usr/bin/argocd
+      sudo curl -sSL -o /usr/bin/argocd https://${ARGOCD_SERVER}/download/argocd-linux-amd64
+      sudo chmod +x /usr/bin/argocd
 
   - name: Restart deployments
     shell: bash
