--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -95,6 +95,11 @@ inputs:
     required: true
     description: GCP service account key in JSON format
 
+  github-token:
+    required: false
+    default: ""
+    description: GitHub token for private repository access (required for Go private modules)
+
 runs:
   using: "composite"
   steps:
@@ -167,6 +172,18 @@ runs:
   - uses: nrwl/nx-set-shas@v4
     with:
       main-branch-name: ${{ inputs.base }}
+
+  - name: Configure Git authentication for Go private modules
+    if: ${{ inputs.setup-go == 'true' }}
+    shell: bash
+    env:
+      GITHUB_TOKEN: ${{ inputs.github-token != '' && inputs.github-token || github.token }}
+    run: |
+      # Configure Git to use token authentication for private repos
+      git config --global url."https://${GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
+      
+      # Configure Go to handle private modules while keeping proxy for public ones
+      go env -w GOPRIVATE="github.com/Matrics-io/*"
 
   - name: Build affected projects using Nx configuration
     if: ${{ inputs.run-target == 'true' }}
