--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -187,4 +187,4 @@ runs:
     shell: bash
     env:
       NX_NO_CLOUD: ${{ inputs.use-nx-cloud == 'false' }}
-    run: nx run-many --all --verbose ${{ inputs.args }} --target='${{ inputs.target }}'
+    run: nx run-many --all --verbose ${{ inputs.args }} --target='${{ inputs.target }}' --maxParallel=2
