--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -100,6 +100,11 @@ inputs:
     default: ""
     description: GitHub Personal Access Token for private repository access (required for Go private modules)
 
+  node-js-max-memory:
+    default: "4096"
+    description: Node.js max memory in MB
+    required: false
+
 runs:
   using: "composite"
   steps:
@@ -190,4 +195,5 @@ runs:
     shell: bash
     env:
       NX_NO_CLOUD: ${{ inputs.use-nx-cloud == 'false' }}
-    run: nx run-many --all --verbose ${{ inputs.args }} --target='${{ inputs.target }}' --maxParallel=1
+      NODE_OPTIONS: --max_old_space_size=${{ inputs.node-js-max-memory }}
+    run: nx affected --verbose ${{ inputs.args }} --target='${{ inputs.target }}' --maxParallel=1
