--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -218,4 +218,5 @@ runs:
     env:
       NX_NO_CLOUD: ${{ inputs.use-nx-cloud == 'false' }}
       NODE_OPTIONS: --max_old_space_size=${{ inputs.node-js-max-memory }}
-    run: nx affected --verbose ${{ inputs.args }} --target='${{ inputs.target }}' --maxParallel=1
+      GITHUB_MATRICS_PERSONAL_ACCESS_TOKEN: ${{ inputs.gh-pat }}
+    run: nx run-many --all --verbose ${{ inputs.args }} --target='${{ inputs.target }}' --maxParallel=1
