--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -219,4 +219,4 @@ runs:
       NX_NO_CLOUD: ${{ inputs.use-nx-cloud == 'false' }}
       NODE_OPTIONS: --max_old_space_size=${{ inputs.node-js-max-memory }}
       GITHUB_MATRICS_PERSONAL_ACCESS_TOKEN: ${{ inputs.gh-pat }}
-    run: nx run-many --all --verbose ${{ inputs.args }} --target='${{ inputs.target }}' --maxParallel=1
+    run: nx run-many --all --output-style=stream --verbose ${{ inputs.args }} --target='${{ inputs.target }}' --maxParallel=1
