--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -216,8 +216,15 @@ runs:
     if: ${{ inputs.run-target == 'true' }}
     shell: bash
     env:
-      NX_NO_CLOUD: ${{ inputs.use-nx-cloud == 'false' }}
       GITHUB_MATRICS_PERSONAL_ACCESS_TOKEN: ${{ inputs.gh-pat }}
-      NODE_OPTIONS: --max_old_space_size=${{ inputs.node-js-max-memory }}
-      NODE_NO_CACHE: 1
-    run: nx run-many --all --verbose ${{ inputs.args }} --target='${{ inputs.target }}' --maxParallel=1 --output-style=stream
+    run: |
+      nx run-many \
+        --all \
+        --verbose \
+        ${{ inputs.args }} \
+        --target='${{ inputs.target }}' \
+        --maxParallel=1 \
+        --output-style=stream \
+        --no-cache \
+         --max_old_space_size=${{ inputs.node-js-max-memory }} \
+        --no-cloud
