DO-289 | only projects with container targets

--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -217,14 +217,10 @@ runs:
     shell: bash
     env:
       GITHUB_MATRICS_PERSONAL_ACCESS_TOKEN: ${{ inputs.gh-pat }}
+      NX_NO_CLOUD: ${{ inputs.use-nx-cloud == 'false' }}
     run: |
-      nx run-many \
-        --all \
-        --verbose \
-        ${{ inputs.args }} \
-        --target='${{ inputs.target }}' \
+      nx --verbose ${{ inputs.args }} --target='${{ inputs.target }}' \
         --maxParallel=1 \
         --output-style=stream \
         --no-cache \
-         --max_old_space_size=${{ inputs.node-js-max-memory }} \
-        --no-cloud
+         --max_old_space_size=${{ inputs.node-js-max-memory }} 
