--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -222,5 +222,6 @@ runs:
       nx run-many --verbose ${{ inputs.args }} --target='${{ inputs.target }}' \
         --maxParallel=1 \
         --output-style=stream \
+        --no-cloud \
         --no-cache \
          --max_old_space_size=${{ inputs.node-js-max-memory }} 
